--- a/.envexample
+++ b/.envexample
@@ -2,7 +2,7 @@ SECRET_KEY=XXXXXXXXXXXX
 DEBUG=1
 
 CORS_ALLOWED_ORIGINS= []
-
+CSRF_TRUSTED_ORIGINS= ["teste", "outro"]
 # AWS
 
 AWS_ACCESS_KEY=CHANGE-ME
